--- a/.github/workflows/ca-clone-secure-ds-test.yml
+++ b/.github/workflows/ca-clone-secure-ds-test.yml
@@ -3,7 +3,7 @@ name: CA clone with secure DS
 on:
   workflow_call:
     inputs:
-      os:
+      db-image:
         required: true
         type: string
 
@@ -22,11 +22,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ca-runner-${{ inputs.os }}-${{ github.run_id }}
-          path: pki-ca-runner.tar
+          key: pki-runner-${{ github.run_id }}
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ca-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -35,7 +35,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh primaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image }}
           HOSTNAME: primaryds.example.com
           PASSWORD: Secret.123
 
@@ -146,7 +146,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh secondaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image }}
           HOSTNAME: secondaryds.example.com
           PASSWORD: Secret.123
 
@@ -309,7 +309,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ca-clone-secure-ds-primary-${{ inputs.os }}
+          name: ca-clone-secure-ds-primary
           path: |
             /tmp/artifacts/primary
 
@@ -317,6 +317,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ca-clone-secure-ds-secondary-${{ inputs.os }}
+          name: ca-clone-secure-ds-secondary
           path: |
             /tmp/artifacts/secondary
