--- a/.github/workflows/ca-clone-test.yml
+++ b/.github/workflows/ca-clone-test.yml
@@ -3,7 +3,7 @@ name: CA clone
 on:
   workflow_call:
     inputs:
-      os:
+      db-image:
         required: true
         type: string
 
@@ -21,11 +21,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ca-runner-${{ inputs.os }}-${{ github.run_id }}
-          path: pki-ca-runner.tar
+          key: pki-runner-${{ github.run_id }}
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ca-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -34,7 +34,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh primaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image }}
           HOSTNAME: primaryds.example.com
           PASSWORD: Secret.123
 
@@ -81,7 +81,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh secondaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image }}
           HOSTNAME: secondaryds.example.com
           PASSWORD: Secret.123
 
@@ -131,7 +131,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh tertiaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image }}
           HOSTNAME: tertiaryds.example.com
           PASSWORD: Secret.123
 
@@ -220,7 +220,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ca-clone-primary-${{ inputs.os }}
+          name: ca-clone-primary
           path: |
             /tmp/artifacts/primary
 
@@ -228,7 +228,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ca-clone-secondary-${{ inputs.os }}
+          name: ca-clone-secondary
           path: |
             /tmp/artifacts/secondary
 
@@ -236,6 +236,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ca-clone-tertiary-${{ inputs.os }}
+          name: ca-clone-tertiary
           path: |
             /tmp/artifacts/tertiary
