--- a/.github/workflows/ca-publishing-crl-ldap-test.yml
+++ b/.github/workflows/ca-publishing-crl-ldap-test.yml
@@ -3,7 +3,10 @@ name: CA with LDAP-based CRL publishing
 on:
   workflow_call:
     inputs:
-      os:
+      repo:
+        required: true
+        type: string
+      db-image:
         required: true
         type: string
 
@@ -25,11 +28,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ca-runner-${{ inputs.os }}-${{ github.run_id }}
-          path: pki-ca-runner.tar
+          key: pki-runner-${{ github.run_id }}
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ca-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -38,8 +41,8 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
-          COPR_REPO: ${{ needs.init.outputs.repo }}
+          IMAGE: ${{ inputs.db-image }}
+          COPR_REPO: ${{ inputs.repo }}
           HOSTNAME: ds.example.com
           PASSWORD: Secret.123
 
@@ -310,6 +313,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ca-publishing-crl-ldap-${{ inputs.os }}
+          name: ca-publishing-crl-ldap
           path: |
             /tmp/artifacts/pki
