Set nsPagedSizeLimit=20000 on creation of users
Currently every entry is pulled by default which has been causing users
problems. There is an RFE to change this attribute dynamically based on
the size of the backend DB but for now set a reasonable default.

Resolves: #1959057

--- a/.github/workflows/ca-existing-ds-test.yml
+++ b/.github/workflows/ca-existing-ds-test.yml
@@ -245,6 +245,16 @@ jobs:
           docker exec ds dsconf localhost backend suffix list | tee actual
           diff expected actual
 
+      - name: Get number of users with nsPagedSizeLimit attribute set
+        run: |
+          docker exec ds ldapsearch \
+              -H ldap://ds.example.com:3389 \
+              -D "cn=Directory Manager" \
+              -b "dc=example,dc=com" \
+              -w Secret.123 \
+              + \
+              | grep "nsPageSizeLimit: 20000" | wc -l
+
       - name: Gather artifacts
         if: always()
         run: |
