Separate out ACME image build step from main build.
This will allow tests that do not require the pki-acme image (i.e. all
the tests except the ACME tests) to start running earlier.

--- a/.github/workflows/acme-tests.yml
+++ b/.github/workflows/acme-tests.yml
@@ -9,9 +9,9 @@ jobs:
     secrets: inherit
 
   build:
-    name: Waiting for build
+    name: Waiting for ACME build
     needs: init
-    uses: ./.github/workflows/wait-for-build.yml
+    uses: ./.github/workflows/wait-for-acme-build.yml
     secrets: inherit
 
   acme-certbot-test:
