--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,6 +126,47 @@ jobs:
       - name: Save PKI images
         run: |
           docker images
+          docker save -o pki-images.tar pki-dist pki-runner pki-server pki-ca
+
+      - name: Store PKI images
+        uses: actions/cache@v3
+        with:
+          key: pki-images-${{ github.sha }}
+          path: pki-images.tar
+
+  build-acme:
+    name: Building ACME
+    needs: init
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        id: cache-buildx
+        uses: actions/cache@v3
+        with:
+          key: buildx-${{ hashFiles('pki.spec') }}
+          path: /tmp/.buildx-cache
+
+      - name: Build pki-acme image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          build-args: |
+            BASE_IMAGE=${{ needs.init.outputs.base-image }}
+            COPR_REPO=${{ vars.COPR_REPO }}
+          tags: pki-acme
+          target: pki-acme
+          cache-from: type=local,src=/tmp/.buildx-cache
+          outputs: type=docker
+
+      - name: Save PKI images
+        run: |
+          docker images
           docker save -o pki-images.tar pki-dist pki-runner pki-server pki-ca pki-acme
 
       - name: Store PKI images
