Add packit copr_build job on commit

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -43,3 +43,17 @@ jobs:
       - centos-stream-9-x86_64
       - rhel-9-x86_64
 
+  - job: copr_build
+    trigger: commit
+    branch: master
+    additional_repos:
+      - "https://download.copr.fedorainfracloud.org/results/%40pki/master/rhel-9-x86_64/"
+      - "https://download.copr.fedorainfracloud.org/results/%40pki/master/fedora-37-x86_64"
+      - "https://download.copr.fedorainfracloud.org/results/%40pki/master/fedora-38-x86_64"
+      - "https://download.copr.fedorainfracloud.org/results/%40pki/master/fedora-rawhide-x86_64"
+      - "https://download.copr.fedorainfracloud.org/results/%40pki/master/centos-stream-9-x86_64"
+    targets:
+      - fedora-all
+      - centos-stream-9-x86_64
+      - rhel-9-x86_64
+
