--- a/.github/workflows/tps-basic-test.yml
+++ b/.github/workflows/tps-basic-test.yml
@@ -61,6 +61,17 @@ jobs:
               -v
 
           docker exec pki pki-server cert-find
+          docker exec pki curl \
+              -s http://localhost.localdomain:8080/$i/admin/$i/getStatus | \
+              python3 -c \
+                  "import sys, json; \
+                  response = json.load(sys.stdin)['Response']; \
+                  type = response['Type']; \
+                  status = response['Status']; \
+                  state = response['State']; \
+                  print(\"  Checking status of \" + response['ProductVersion'] + \" \" + response['Version'] + \" subsystems:\") \
+                  if type == \"CA\" else print('', end=''); \
+                  print(\"  \" + response['Type'] + \" is \" + response['Status'] + \" with state \" +  response['State']);"
 
       - name: Install KRA
         run: |
